\set ON_ERROR_STOP on

BEGIN;

-- Latest product specification includes Raw Leads again.
UPDATE marketing.kpi_definitions
SET is_active = true,
    updated_at = CURRENT_TIMESTAMP
WHERE kpi_key = 'raw_leads'
  AND NOT is_active;

-- ---------------------------------------------------------------------------
-- Cost categories and normalized project expense entries
-- ---------------------------------------------------------------------------

CREATE TABLE IF NOT EXISTS finance.expense_categories (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    parent_id bigint,
    code character varying(100) NOT NULL,
    name character varying(255) NOT NULL,
    category_type character varying(20) NOT NULL DEFAULT 'LEAF',
    is_active boolean NOT NULL DEFAULT true,
    created_at timestamp with time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamp with time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT expense_categories_code_unique UNIQUE (code),
    CONSTRAINT expense_categories_parent_fkey
        FOREIGN KEY (parent_id) REFERENCES finance.expense_categories(id),
    CONSTRAINT expense_categories_not_self_parent CHECK (parent_id IS NULL OR parent_id <> id),
    CONSTRAINT expense_categories_type_check
        CHECK (category_type IN ('GROUP', 'LEAF')),
    CONSTRAINT expense_categories_code_not_blank CHECK (btrim(code) <> ''),
    CONSTRAINT expense_categories_name_not_blank CHECK (btrim(name) <> '')
);

CREATE INDEX IF NOT EXISTS idx_expense_categories_parent
    ON finance.expense_categories (parent_id);

CREATE OR REPLACE FUNCTION finance.prevent_expense_category_cycle()
RETURNS trigger
LANGUAGE plpgsql
AS $$
BEGIN
    IF NEW.parent_id IS NULL THEN
        RETURN NEW;
    END IF;

    IF EXISTS (
        WITH RECURSIVE ancestors AS (
            SELECT category.id, category.parent_id
            FROM finance.expense_categories AS category
            WHERE category.id = NEW.parent_id
            UNION ALL
            SELECT category.id, category.parent_id
            FROM finance.expense_categories AS category
            JOIN ancestors ON category.id = ancestors.parent_id
        )
        SELECT 1 FROM ancestors WHERE id = NEW.id
    ) THEN
        RAISE EXCEPTION 'Expense category hierarchy cannot contain a cycle';
    END IF;

    RETURN NEW;
END;
$$;

DROP TRIGGER IF EXISTS trg_prevent_expense_category_cycle
    ON finance.expense_categories;

CREATE TRIGGER trg_prevent_expense_category_cycle
BEFORE INSERT OR UPDATE OF parent_id
ON finance.expense_categories
FOR EACH ROW
EXECUTE FUNCTION finance.prevent_expense_category_cycle();

INSERT INTO finance.expense_categories (code, name, category_type)
VALUES
    ('DIRECT_COST', 'Direct cost', 'LEAF'),
    ('OVERHEAD_COST', 'Overhead cost', 'LEAF')
ON CONFLICT (code) DO NOTHING;

CREATE TABLE IF NOT EXISTS finance.project_expense_entries (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    project_id bigint NOT NULL,
    category_id bigint NOT NULL,
    expense_date date NOT NULL,
    description text,
    planned_amount numeric(18,2),
    actual_amount numeric(18,2),
    currency_id bigint NOT NULL DEFAULT 46,
    status character varying(20) NOT NULL DEFAULT 'SAVED',
    idempotency_key character varying(150),
    row_version bigint NOT NULL DEFAULT 1,
    legacy_project_expense_id bigint,
    legacy_cost_type character varying(20),
    created_by bigint,
    updated_by bigint,
    created_at timestamp with time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamp with time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at timestamp with time zone,
    CONSTRAINT project_expense_entries_project_fkey
        FOREIGN KEY (project_id) REFERENCES core.projects(id),
    CONSTRAINT project_expense_entries_category_fkey
        FOREIGN KEY (category_id) REFERENCES finance.expense_categories(id),
    CONSTRAINT project_expense_entries_currency_fkey
        FOREIGN KEY (currency_id) REFERENCES core.dropdowns(id),
    CONSTRAINT project_expense_entries_created_by_fkey
        FOREIGN KEY (created_by) REFERENCES core.members(id),
    CONSTRAINT project_expense_entries_updated_by_fkey
        FOREIGN KEY (updated_by) REFERENCES core.members(id),
    CONSTRAINT project_expense_entries_legacy_fkey
        FOREIGN KEY (legacy_project_expense_id) REFERENCES finance.project_expenses(id),
    CONSTRAINT project_expense_entries_planned_nonnegative
        CHECK (planned_amount IS NULL OR planned_amount >= 0),
    CONSTRAINT project_expense_entries_actual_nonnegative
        CHECK (actual_amount IS NULL OR actual_amount >= 0),
    CONSTRAINT project_expense_entries_has_amount
        CHECK (planned_amount IS NOT NULL OR actual_amount IS NOT NULL),
    CONSTRAINT project_expense_entries_status_check
        CHECK (status IN ('DRAFT', 'SAVED', 'APPROVED', 'CANCELLED')),
    CONSTRAINT project_expense_entries_idempotency_not_blank
        CHECK (idempotency_key IS NULL OR btrim(idempotency_key) <> ''),
    CONSTRAINT project_expense_entries_version_positive CHECK (row_version > 0),
    CONSTRAINT project_expense_entries_legacy_type_check
        CHECK (legacy_cost_type IS NULL OR legacy_cost_type IN ('DIRECT', 'OVERHEAD')),
    CONSTRAINT project_expense_entries_legacy_unique
        UNIQUE (legacy_project_expense_id, legacy_cost_type)
);

CREATE UNIQUE INDEX IF NOT EXISTS project_expense_entries_idempotency_unique
    ON finance.project_expense_entries (project_id, idempotency_key)
    WHERE idempotency_key IS NOT NULL;

CREATE INDEX IF NOT EXISTS idx_project_expense_entries_summary
    ON finance.project_expense_entries (expense_date, category_id, currency_id)
    WHERE deleted_at IS NULL;

CREATE INDEX IF NOT EXISTS idx_project_expense_entries_project_summary
    ON finance.project_expense_entries (project_id, expense_date, category_id, currency_id)
    WHERE deleted_at IS NULL;

CREATE OR REPLACE FUNCTION finance.bump_project_expense_entry_version()
RETURNS trigger
LANGUAGE plpgsql
AS $$
BEGIN
    IF NEW.row_version <> OLD.row_version THEN
        RAISE EXCEPTION 'row_version is managed by the database';
    END IF;
    NEW.row_version := OLD.row_version + 1;
    NEW.updated_at := CURRENT_TIMESTAMP;
    RETURN NEW;
END;
$$;

DROP TRIGGER IF EXISTS trg_bump_project_expense_entry_version
    ON finance.project_expense_entries;

CREATE TRIGGER trg_bump_project_expense_entry_version
BEFORE UPDATE ON finance.project_expense_entries
FOR EACH ROW
EXECUTE FUNCTION finance.bump_project_expense_entry_version();

-- Legacy direct/overhead values represent known actual costs. Planned cost remains
-- NULL because the old schema did not contain that business value.
INSERT INTO finance.project_expense_entries (
    project_id, category_id, expense_date, description,
    planned_amount, actual_amount, currency_id, status, idempotency_key,
    legacy_project_expense_id, legacy_cost_type, created_by, created_at, updated_at
)
SELECT legacy.project_id, category.id,
       make_date(legacy.expense_year, legacy.expense_month, 1),
       legacy.direct_note, NULL, legacy.direct_cost,
       legacy.currency_id, 'SAVED', 'legacy:direct:' || legacy.id,
       legacy.id, 'DIRECT', legacy.created_by, legacy.created_at, legacy.updated_at
FROM finance.project_expenses AS legacy
JOIN finance.expense_categories AS category ON category.code = 'DIRECT_COST'
WHERE legacy.direct_cost IS NOT NULL
  AND (legacy.direct_cost <> 0 OR legacy.direct_note IS NOT NULL)
ON CONFLICT (legacy_project_expense_id, legacy_cost_type) DO NOTHING;

INSERT INTO finance.project_expense_entries (
    project_id, category_id, expense_date, description,
    planned_amount, actual_amount, currency_id, status, idempotency_key,
    legacy_project_expense_id, legacy_cost_type, created_by, created_at, updated_at
)
SELECT legacy.project_id, category.id,
       make_date(legacy.expense_year, legacy.expense_month, 1),
       legacy.overhead_note, NULL, legacy.overhead_cost,
       legacy.currency_id, 'SAVED', 'legacy:overhead:' || legacy.id,
       legacy.id, 'OVERHEAD', legacy.created_by, legacy.created_at, legacy.updated_at
FROM finance.project_expenses AS legacy
JOIN finance.expense_categories AS category ON category.code = 'OVERHEAD_COST'
WHERE legacy.overhead_cost IS NOT NULL
  AND (legacy.overhead_cost <> 0 OR legacy.overhead_note IS NOT NULL)
ON CONFLICT (legacy_project_expense_id, legacy_cost_type) DO NOTHING;

CREATE OR REPLACE VIEW finance.expense_category_monthly_summary AS
WITH RECURSIVE category_paths AS (
    SELECT category.id AS ancestor_id, category.id AS descendant_id
    FROM finance.expense_categories AS category
    UNION ALL
    SELECT path.ancestor_id, child.id
    FROM category_paths AS path
    JOIN finance.expense_categories AS child ON child.parent_id = path.descendant_id
)
SELECT path.ancestor_id AS category_id,
       entry.project_id,
       extract(year FROM entry.expense_date)::smallint AS expense_year,
       extract(month FROM entry.expense_date)::smallint AS expense_month,
       entry.currency_id,
       sum(entry.planned_amount) AS planned_total,
       sum(entry.actual_amount) AS actual_total,
       count(*) AS source_entry_count
FROM category_paths AS path
JOIN finance.project_expense_entries AS entry ON entry.category_id = path.descendant_id
WHERE entry.deleted_at IS NULL
  AND entry.status IN ('SAVED', 'APPROVED')
GROUP BY path.ancestor_id, entry.project_id,
         extract(year FROM entry.expense_date), extract(month FROM entry.expense_date),
         entry.currency_id;

CREATE OR REPLACE VIEW finance.expense_category_yearly_summary AS
SELECT category_id, project_id, expense_year, currency_id,
       sum(planned_total) AS planned_total,
       sum(actual_total) AS actual_total,
       sum(planned_total) - sum(actual_total) AS remaining,
       CASE
           WHEN sum(planned_total) IS NULL OR sum(planned_total) = 0 THEN NULL
           ELSE round(sum(actual_total) / sum(planned_total) * 100, 4)
       END AS usage_percent,
       sum(source_entry_count) AS source_entry_count
FROM finance.expense_category_monthly_summary
GROUP BY category_id, project_id, expense_year, currency_id;

COMMENT ON TABLE finance.project_expenses IS
    'Legacy monthly direct/overhead table; new writes use finance.project_expense_entries';

-- ---------------------------------------------------------------------------
-- Independent annual KPI plans, fixed project KPI plans, and dated actuals
-- ---------------------------------------------------------------------------

CREATE TABLE IF NOT EXISTS marketing.annual_kpi_plans (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    year smallint NOT NULL,
    row_version bigint NOT NULL DEFAULT 1,
    created_by bigint,
    updated_by bigint,
    created_at timestamp with time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamp with time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT annual_kpi_plans_year_unique UNIQUE (year),
    CONSTRAINT annual_kpi_plans_year_check CHECK (year BETWEEN 2000 AND 2200),
    CONSTRAINT annual_kpi_plans_version_positive CHECK (row_version > 0),
    CONSTRAINT annual_kpi_plans_created_by_fkey FOREIGN KEY (created_by) REFERENCES core.members(id),
    CONSTRAINT annual_kpi_plans_updated_by_fkey FOREIGN KEY (updated_by) REFERENCES core.members(id)
);

CREATE TABLE IF NOT EXISTS marketing.annual_kpi_plan_items (
    annual_plan_id bigint NOT NULL,
    kpi_key character varying(100) NOT NULL,
    target_value numeric(18,2) NOT NULL,
    PRIMARY KEY (annual_plan_id, kpi_key),
    CONSTRAINT annual_kpi_plan_items_plan_fkey
        FOREIGN KEY (annual_plan_id) REFERENCES marketing.annual_kpi_plans(id) ON DELETE CASCADE,
    CONSTRAINT annual_kpi_plan_items_kpi_fkey
        FOREIGN KEY (kpi_key) REFERENCES marketing.kpi_definitions(kpi_key),
    CONSTRAINT annual_kpi_plan_items_target_nonnegative CHECK (target_value >= 0)
);

INSERT INTO marketing.annual_kpi_plans (year, created_at, updated_at)
SELECT year, created_at, updated_at
FROM marketing.kpi_plans
ON CONFLICT (year) DO NOTHING;

INSERT INTO marketing.annual_kpi_plan_items (annual_plan_id, kpi_key, target_value)
SELECT annual.id, values.kpi_key, values.target_value
FROM marketing.kpi_plans AS legacy
JOIN marketing.annual_kpi_plans AS annual ON annual.year = legacy.year
CROSS JOIN LATERAL (VALUES
    ('raw_leads', legacy.raw_leads_plan::numeric),
    ('mql', legacy.mql_plan::numeric),
    ('sql', legacy.sql_plan::numeric),
    ('opportunity', legacy.opp_plan::numeric),
    ('closed_deal', legacy.closed_deal_plan::numeric),
    ('pipeline_value', legacy.pipeline_value_plan),
    ('won_value', legacy.won_value_plan)
) AS values(kpi_key, target_value)
ON CONFLICT (annual_plan_id, kpi_key) DO NOTHING;

CREATE TABLE IF NOT EXISTS marketing.project_kpi_plans (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    project_id bigint NOT NULL,
    year smallint NOT NULL,
    row_version bigint NOT NULL DEFAULT 1,
    created_by bigint,
    updated_by bigint,
    created_at timestamp with time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamp with time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT project_kpi_plans_project_year_unique UNIQUE (project_id, year),
    CONSTRAINT project_kpi_plans_project_fkey
        FOREIGN KEY (project_id) REFERENCES core.projects(id),
    CONSTRAINT project_kpi_plans_year_check CHECK (year BETWEEN 2000 AND 2200),
    CONSTRAINT project_kpi_plans_version_positive CHECK (row_version > 0),
    CONSTRAINT project_kpi_plans_created_by_fkey FOREIGN KEY (created_by) REFERENCES core.members(id),
    CONSTRAINT project_kpi_plans_updated_by_fkey FOREIGN KEY (updated_by) REFERENCES core.members(id)
);

CREATE TABLE IF NOT EXISTS marketing.project_kpi_plan_items (
    project_plan_id bigint NOT NULL,
    kpi_key character varying(100) NOT NULL,
    target_value numeric(18,2) NOT NULL,
    PRIMARY KEY (project_plan_id, kpi_key),
    CONSTRAINT project_kpi_plan_items_plan_fkey
        FOREIGN KEY (project_plan_id) REFERENCES marketing.project_kpi_plans(id) ON DELETE CASCADE,
    CONSTRAINT project_kpi_plan_items_kpi_fkey
        FOREIGN KEY (kpi_key) REFERENCES marketing.kpi_definitions(kpi_key),
    CONSTRAINT project_kpi_plan_items_target_nonnegative CHECK (target_value >= 0)
);

CREATE OR REPLACE FUNCTION marketing.bump_annual_kpi_plan_version()
RETURNS trigger
LANGUAGE plpgsql
AS $$
BEGIN
    IF NEW.row_version <> OLD.row_version THEN
        RAISE EXCEPTION 'row_version is managed by the database';
    END IF;
    NEW.row_version := OLD.row_version + 1;
    NEW.updated_at := CURRENT_TIMESTAMP;
    RETURN NEW;
END;
$$;

DROP TRIGGER IF EXISTS trg_bump_annual_kpi_plan_version
    ON marketing.annual_kpi_plans;

CREATE TRIGGER trg_bump_annual_kpi_plan_version
BEFORE UPDATE ON marketing.annual_kpi_plans
FOR EACH ROW
EXECUTE FUNCTION marketing.bump_annual_kpi_plan_version();

CREATE OR REPLACE FUNCTION marketing.bump_project_kpi_plan_version()
RETURNS trigger
LANGUAGE plpgsql
AS $$
BEGIN
    IF NEW.row_version <> OLD.row_version THEN
        RAISE EXCEPTION 'row_version is managed by the database';
    END IF;
    NEW.row_version := OLD.row_version + 1;
    NEW.updated_at := CURRENT_TIMESTAMP;
    RETURN NEW;
END;
$$;

DROP TRIGGER IF EXISTS trg_bump_project_kpi_plan_version
    ON marketing.project_kpi_plans;

CREATE TRIGGER trg_bump_project_kpi_plan_version
BEFORE UPDATE ON marketing.project_kpi_plans
FOR EACH ROW
EXECUTE FUNCTION marketing.bump_project_kpi_plan_version();

CREATE OR REPLACE FUNCTION marketing.touch_kpi_plan_from_item()
RETURNS trigger
LANGUAGE plpgsql
AS $$
DECLARE
    parent_plan_id bigint;
BEGIN
    IF TG_TABLE_NAME = 'annual_kpi_plan_items' THEN
        IF TG_OP = 'DELETE' THEN
            parent_plan_id := OLD.annual_plan_id;
        ELSE
            parent_plan_id := NEW.annual_plan_id;
        END IF;
        UPDATE marketing.annual_kpi_plans
        SET updated_at = CURRENT_TIMESTAMP
        WHERE id = parent_plan_id;
    ELSE
        IF TG_OP = 'DELETE' THEN
            parent_plan_id := OLD.project_plan_id;
        ELSE
            parent_plan_id := NEW.project_plan_id;
        END IF;
        UPDATE marketing.project_kpi_plans
        SET updated_at = CURRENT_TIMESTAMP
        WHERE id = parent_plan_id;
    END IF;
    RETURN NULL;
END;
$$;

DROP TRIGGER IF EXISTS trg_touch_annual_kpi_plan_from_item
    ON marketing.annual_kpi_plan_items;

CREATE TRIGGER trg_touch_annual_kpi_plan_from_item
AFTER INSERT OR UPDATE OR DELETE ON marketing.annual_kpi_plan_items
FOR EACH ROW
EXECUTE FUNCTION marketing.touch_kpi_plan_from_item();

DROP TRIGGER IF EXISTS trg_touch_project_kpi_plan_from_item
    ON marketing.project_kpi_plan_items;

CREATE TRIGGER trg_touch_project_kpi_plan_from_item
AFTER INSERT OR UPDATE OR DELETE ON marketing.project_kpi_plan_items
FOR EACH ROW
EXECUTE FUNCTION marketing.touch_kpi_plan_from_item();

CREATE INDEX IF NOT EXISTS idx_project_kpi_plans_year
    ON marketing.project_kpi_plans (year, project_id);

CREATE TABLE IF NOT EXISTS marketing.project_kpi_actuals (
    id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    project_id bigint NOT NULL,
    reporting_date date NOT NULL,
    kpi_key character varying(100) NOT NULL,
    actual_value numeric(18,2) NOT NULL,
    idempotency_key character varying(150),
    created_by bigint,
    updated_by bigint,
    created_at timestamp with time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamp with time zone NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT project_kpi_actuals_project_fkey
        FOREIGN KEY (project_id) REFERENCES core.projects(id),
    CONSTRAINT project_kpi_actuals_kpi_fkey
        FOREIGN KEY (kpi_key) REFERENCES marketing.kpi_definitions(kpi_key),
    CONSTRAINT project_kpi_actuals_created_by_fkey FOREIGN KEY (created_by) REFERENCES core.members(id),
    CONSTRAINT project_kpi_actuals_updated_by_fkey FOREIGN KEY (updated_by) REFERENCES core.members(id),
    CONSTRAINT project_kpi_actuals_value_nonnegative CHECK (actual_value >= 0),
    CONSTRAINT project_kpi_actuals_idempotency_not_blank
        CHECK (idempotency_key IS NULL OR btrim(idempotency_key) <> ''),
    CONSTRAINT project_kpi_actuals_day_unique UNIQUE (project_id, reporting_date, kpi_key)
);

CREATE UNIQUE INDEX IF NOT EXISTS project_kpi_actuals_idempotency_unique
    ON marketing.project_kpi_actuals (project_id, idempotency_key, kpi_key)
    WHERE idempotency_key IS NOT NULL;

CREATE INDEX IF NOT EXISTS idx_project_kpi_actuals_project_date
    ON marketing.project_kpi_actuals (project_id, reporting_date);

CREATE OR REPLACE VIEW marketing.project_kpi_allocation_status AS
SELECT annual.id AS annual_plan_id,
       annual.year,
       annual_item.kpi_key,
       annual_item.target_value AS annual_target,
       COALESCE(sum(project_item.target_value), 0) AS projects_total,
       COALESCE(sum(project_item.target_value), 0) - annual_item.target_value AS difference,
       CASE
           WHEN COALESCE(sum(project_item.target_value), 0) = annual_item.target_value THEN 'BALANCED'
           WHEN COALESCE(sum(project_item.target_value), 0) < annual_item.target_value THEN 'UNDER_ALLOCATED'
           ELSE 'OVER_ALLOCATED'
       END AS allocation_status
FROM marketing.annual_kpi_plans AS annual
JOIN marketing.annual_kpi_plan_items AS annual_item ON annual_item.annual_plan_id = annual.id
LEFT JOIN marketing.project_kpi_plans AS project_plan ON project_plan.year = annual.year
LEFT JOIN marketing.project_kpi_plan_items AS project_item
       ON project_item.project_plan_id = project_plan.id
      AND project_item.kpi_key = annual_item.kpi_key
GROUP BY annual.id, annual.year, annual_item.kpi_key, annual_item.target_value;

-- Preserve the old view contract but make its source independent of monthly rows.
DROP VIEW IF EXISTS marketing.kpi_plan_annual_totals;

CREATE VIEW marketing.kpi_plan_annual_totals AS
SELECT annual.id AS plan_id,
       annual.year,
       item.kpi_key,
       definition.label,
       definition.value_type,
       item.target_value AS annual_target
FROM marketing.annual_kpi_plans AS annual
JOIN marketing.annual_kpi_plan_items AS item ON item.annual_plan_id = annual.id
JOIN marketing.kpi_definitions AS definition ON definition.kpi_key = item.kpi_key
WHERE definition.is_active;

COMMENT ON TABLE marketing.kpi_monthly_plan_values IS
    'Legacy read-only monthly plan data; annual and project plans must not be derived from it';

CREATE OR REPLACE FUNCTION marketing.reject_legacy_monthly_plan_write()
RETURNS trigger
LANGUAGE plpgsql
AS $$
BEGIN
    RAISE EXCEPTION
        'kpi_monthly_plan_values is legacy read-only data; use annual/project KPI plan tables';
END;
$$;

DROP TRIGGER IF EXISTS trg_reject_legacy_monthly_plan_write
    ON marketing.kpi_monthly_plan_values;

CREATE TRIGGER trg_reject_legacy_monthly_plan_write
BEFORE INSERT OR UPDATE OR DELETE
ON marketing.kpi_monthly_plan_values
FOR EACH STATEMENT
EXECUTE FUNCTION marketing.reject_legacy_monthly_plan_write();

COMMENT ON TABLE marketing.kpi_actuals IS
    'Legacy weekly actuals without project/date identity; new writes use marketing.project_kpi_actuals';

COMMIT;
